// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom columns for main view in response table 1`] = `
Array [
  Object {
    "Cell": [Function],
    "Header": "First Names",
    "accessor": [Function],
    "id": "First Names",
  },
]
`;

exports[`renders custom columns for unwind by view in response table 1`] = `
Array [
  Object {
    "Cell": [Function],
    "Header": "First Names",
    "accessor": [Function],
    "id": "First Names",
  },
  Object {
    "Cell": [Function],
    "Header": "Name.last",
    "accessor": [Function],
    "id": "Name.last",
  },
]
`;

exports[`renders custom columns with constant values for main view in response table 1`] = `
Array [
  Object {
    "Cell": [Function],
    "Header": "Names",
    "accessor": [Function],
    "id": "Names",
  },
]
`;

exports[`renders custom columns with multiple values for main view in response table 1`] = `
Array [
  Object {
    "Cell": [Function],
    "Header": "Names",
    "accessor": [Function],
    "id": "Names",
  },
]
`;

exports[`renders custom columns with no spaces for main view in response table 1`] = `
Array [
  Object {
    "Cell": [Function],
    "Header": "Names",
    "accessor": [Function],
    "id": "Names",
  },
]
`;

exports[`renders default columns for main view in response table 1`] = `
Array [
  Object {
    "Cell": [Function],
    "Header": "ID",
    "accessor": [Function],
    "id": "ID",
  },
  Object {
    "Cell": [Function],
    "Filter": [Function],
    "Header": "PAID",
    "accessor": [Function],
    "filterMethod": [Function],
    "id": "PAID",
  },
  Object {
    "Cell": [Function],
    "Header": "AMOUNT_PAID",
    "accessor": [Function],
    "id": "AMOUNT_PAID",
  },
  Object {
    "Cell": [Function],
    "Header": "DATE_CREATED",
    "accessor": [Function],
    "id": "DATE_CREATED",
  },
  Object {
    "Cell": [Function],
    "Header": "Name.first",
    "accessor": [Function],
    "id": "Name.first",
  },
  Object {
    "Cell": [Function],
    "Header": "Name.last",
    "accessor": [Function],
    "id": "Name.last",
  },
  Object {
    "Cell": [Function],
    "Header": "Parents.age",
    "accessor": [Function],
    "id": "Parents.age",
  },
]
`;
